unpackaged/main/default/objects/EG_and_LMF__c/EG_and_LMF__c.object-meta.xml
<CustomObject>
    <description>Entity Grant and Local Marketing Advertisement records.</description>
    <label>EG and LMF</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EGs and LMFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>