unpackaged/main/default/objects/EG_and_LMF__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Distributor associated with EG or LMF.</description>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EGs and LMFs</relationshipLabel>
    <relationshipName>EGs_and_LMFs</relationshipName>
    <type>Lookup</type>
</CustomField>