unpackaged/main/default/objects/EG_and_LMF__c/fields/LMFActualSpend__c.field-meta.xml
<CustomField>
    <fullName>LMFActualSpend__c</fullName>
    <label>LMF Actual Spend</label>
    <summarizedField>EGandLMFSpend__c.ActualSpend__c</summarizedField>
    <summaryFilterItems>
        <field>EGandLMFSpend__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>LMF Spend</value>
    </summaryFilterItems>
    <summaryForeignKey>EGandLMFSpend__c.ParentEGorLMF__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>